--- a/tracker/templates/tracker/base.html
+++ b/tracker/templates/tracker/base.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">
-                Mental Health Tracker
+                <i class="fas fa-brain"></i> Mental Health Tracker
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -34,23 +34,23 @@
                     {% if user.is_authenticated %}
                         <li class="nav-item">
                             <span class="navbar-text me-3">
-                                {{ user.username }}
+                                <i class="fas fa-user"></i> {{ user.username }}
                             </span>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'logout' %}">
-                                Logout
+                                <i class="fas fa-sign-out-alt"></i> Logout
                             </a>
                         </li>
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'login' %}">
-                                Login
+                                <i class="fas fa-sign-in-alt"></i> Login
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'register' %}">
-                                Register
+                                <i class="fas fa-user-plus"></i> Register
                             </a>
                         </li>
                     {% endif %}
